Prevent tables from overflowing on mobile

--- a/app/assets/stylesheets/components/tables.scss
+++ b/app/assets/stylesheets/components/tables.scss
@@ -55,3 +55,8 @@
   padding: 0 map-get($spacers, 2);
   width: 100%;
 }
+
+// Does not work if ".table-sticky" class is used.
+.table-overflow-scroll {
+  overflow-x: scroll;
+}
